Improve type names
